update source code front-end

--- a/udagram-frontend/Dockerfile
+++ b/udagram-frontend/Dockerfile
@@ -1,15 +1,23 @@
-### Build
+# Use IONIC base image
 FROM beevelop/ionic:v2021.06.1 AS ionic
-## Create app directory
+
+# Create app directory in Docker
 WORKDIR /usr/src/app
-## Install app dependencies
-## A wildcard is used to ensure both package.json AND package-lock.json are copied
+
+# Install app dependencies by copying
+# package.json and package-lock.json
 COPY package*.json ./
-RUN npm ci -f
-## Bundle app source
+
+# Install dependencies in Docker
+RUN npm install -f
+
+# Copy app from local environment into the Docker image
 COPY . .
+
+# Build app
 RUN ionic build
-### Run 
+
 FROM nginx:alpine
+
 #COPY www /usr/share/nginx/html
 COPY --from=ionic  /usr/src/app/www /usr/share/nginx/html
