--- a/deployments/env-configmap.yaml
+++ b/deployments/env-configmap.yaml
@@ -7,6 +7,6 @@ data:
   JWT_SECRET: testing
   POSTGRES_DB: postgres
   POSTGRES_HOST: dbprj3.cgfxba2piflt.us-east-1.rds.amazonaws.com
-  URL: http://localhost:8100
+  URL: http://a20994f956813442eb18932fc37d6274-1237222269.us-east-1.elb.amazonaws.com:8100
 metadata:
   name: env-config
